--- a/src/main/resources/Settings/settings.fxml
+++ b/src/main/resources/Settings/settings.fxml
@@ -9,7 +9,7 @@
       <ChoiceBox fx:id="Temperature" layoutX="14.0" layoutY="14.0" prefHeight="45.0" prefWidth="120.0">
       </ChoiceBox>
       <TextField fx:id="Position" layoutX="160.0" layoutY="16.0" prefHeight="45.0" prefWidth="120.0" text="Position change" />
-      <Button fx:id="Export" layoutX="311.0" layoutY="16.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="120.0" text="Exportieren" />
+      <Button fx:id="Export" onAction="#export" layoutX="311.0" layoutY="16.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="120.0" text="Exportieren" />
       <ColorPicker fx:id="Colourpick" layoutX="466.0" layoutY="16.0" prefHeight="45.0" prefWidth="120.0" />
       <Text layoutX="450.0" layoutY="380.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Version: 1.0.0 " wrappingWidth="120.00000067055225" />
    </children>
