--- a/src/main/resources/MainWindow/mainWindow.fxml
+++ b/src/main/resources/MainWindow/mainWindow.fxml
@@ -43,9 +43,11 @@
           </Menu>
         </menus>
       </MenuBar>
+
    </top>
 
    <center>
+
        <Pane fx:id="weatherInfo">
            <VBox fx:id="leftInfos" spacing="30" layoutX="29" layoutY="30">
                <Label fx:id="minTemp" layoutX="46.0" layoutY="49.0" styleClass="displayDetails" text="Label" />
@@ -53,7 +55,6 @@
                <Label fx:id="humidity" layoutX="46.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
                <Label fx:id="rain" layoutX="46.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
            </VBox>
-
 
            <VBox fx:id="centerInfos" spacing="5" layoutX="295" layoutY="15">
                <Label fx:id="temp" prefHeight="56.0" prefWidth="167.0" styleClass="displayTemp" text="25 Grad" textFill="WHITE">
@@ -71,7 +72,6 @@
                        <Image fx:id="img" url="/img/sun-icon.png" />
                    </image>
                </ImageView>
-
            </VBox>
 
            <VBox fx:id="rightInfos" spacing="20" layoutX="550" layoutY="30">
@@ -80,7 +80,9 @@
                <Label fx:id="moonphase" layoutX="490.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
                <Label fx:id="feelsLike" layoutX="490.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
            </VBox>
+           <Label layoutX="360" layoutY="381" text="Background photo created by freestockcenter - www.freepik.com"/>
        </Pane>
+
    </center>
 
     <bottom>
@@ -184,6 +186,7 @@
             </BorderPane>
 
             <BorderPane fx:id="bp6" layoutX="504.0" layoutY="246.0" onMouseClicked="#changeDaySix" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
+
                 <top>
                     <Label BorderPane.alignment="TOP_CENTER" fx:id="daySix" layoutX="23.0" layoutY="14.0" style="-fx-font-weight: bold; -fx-font-size: 14px" text="Freitag" />
                 </top>
@@ -205,5 +208,5 @@
         </HBox>
     </bottom>
 
-    <Label text="Background photo created by freestockcenter - www.freepik.com"/>
+
 </BorderPane>
