--- a/src/main/resources/MainWindow/mainWindow.fxml
+++ b/src/main/resources/MainWindow/mainWindow.fxml
@@ -31,24 +31,14 @@
               <MenuItem fx:id="closeMenu" onAction="#closeWindow" mnemonicParsing="false" text="Close"/>
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
         </menus>
       </MenuBar>
 
    </top>
 
    <center>
-
        <Pane fx:id="weatherInfo">
+           <Label fx:id="time" styleClass="displayDetails"/>
            <VBox fx:id="leftInfos" spacing="30" layoutX="29" layoutY="30">
                <Label fx:id="minTemp" layoutX="46.0" layoutY="49.0" styleClass="displayDetails" text="Label" />
                <Label fx:id="maxTemp" layoutX="46.0" layoutY="84.0" styleClass="displayDetails" text="Label" />
@@ -62,7 +52,6 @@
                        <Font size="45.0" />
                    </font>
                </Label>
-
                <HBox spacing="5">
                    <Label fx:id="dayOne" layoutX="245.0" layoutY="66.0" styleClass="displayDay" text="Montag 27.08.2020" textFill="WHITE" />
                    <Label fx:id="displayDate" layoutX="340.0" layoutY="66.0" styleClass="displayDate" text="27.08.2020" textFill="WHITE" />
