changed css and picture added

--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -14,7 +14,7 @@
 }
 
 .myBorderPaneCloudyRain {
-    -fx-background-image: url("/img/backgrounds/rain.jpg");
+    -fx-background-image: url("/img/backgrounds/rain2.jpg");
     -fx-background-repeat: stretch;
     -fx-background-size: 710 420;
     -fx-background-position: center center;
