--- a/src/main/resources/Settings/settings.fxml
+++ b/src/main/resources/Settings/settings.fxml
@@ -8,7 +8,7 @@
    <children>
       <ChoiceBox fx:id="Temperature" layoutX="14.0" layoutY="14.0" prefHeight="45.0" prefWidth="120.0">
       </ChoiceBox>
-      <TextField fx:id="Position" layoutX="160.0" layoutY="16.0" prefHeight="45.0" prefWidth="120.0" text="Position change" />
+      <TextField fx:id="Position" onAction="#enterAction" onMouseExited="#mouseExit" layoutX="160.0" layoutY="16.0" prefHeight="45.0" prefWidth="120.0" promptText="1220, AT" />
       <Button fx:id="Export" onAction="#export" layoutX="311.0" layoutY="16.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="120.0" text="Exportieren" />
       <ColorPicker fx:id="Colourpick" layoutX="466.0" layoutY="16.0" prefHeight="45.0" prefWidth="120.0" />
       <Text layoutX="450.0" layoutY="380.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Version: 1.0.0 " wrappingWidth="120.00000067055225" />
