--- a/src/main/resources/MainWindow/mainWindow.fxml
+++ b/src/main/resources/MainWindow/mainWindow.fxml
@@ -23,7 +23,7 @@
    <top>
       <MenuBar fx:id="menuBar" styleClass="menuBar" BorderPane.alignment="CENTER">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
+          <Menu mnemonicParsing="false" text="Options">
               <items>
                   <MenuItem fx:id="settingMenu" onAction="#openSettings" mnemonicParsing="false" text="Settings" />
               </items>
@@ -31,6 +31,8 @@
               <MenuItem fx:id="closeMenu" onAction="#closeWindow" mnemonicParsing="false" text="Close"/>
             </items>
           </Menu>
+            <Menu text="Refresh" onAction="#refresh" />
+
         </menus>
       </MenuBar>
 
@@ -42,8 +44,8 @@
            <VBox fx:id="leftInfos" spacing="30" layoutX="29" layoutY="30">
                <Label fx:id="minTemp" layoutX="46.0" layoutY="49.0" styleClass="displayDetails" text="Label" />
                <Label fx:id="maxTemp" layoutX="46.0" layoutY="84.0" styleClass="displayDetails" text="Label" />
-               <Label fx:id="humidity" layoutX="46.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
                <Label fx:id="rain" layoutX="46.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
+               <Label fx:id="humidity" layoutX="46.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
            </VBox>
 
            <VBox fx:id="centerInfos" spacing="5" layoutX="295" layoutY="15">
